--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -4,6 +4,10 @@
   display: flex;
 }
 
+.main-content {
+  background-color: white;
+}
+
 .sidebar {
   position: relative;
 }
@@ -12,7 +16,8 @@
   position: absolute;
   top: 0;
   right: 0;
-  height: 100vh;  /* Set the height to 100% to cover the full height of the sidebar */
+  height: 100vh;
+  /* Set the height to 100% to cover the full height of the sidebar */
   width: 1px;
   background-color: #721f1f;
 }
