--- a/react-app/src/ExerciseDetails.css
+++ b/react-app/src/ExerciseDetails.css
@@ -1,4 +1,4 @@
-.exercise-details-modal {
+/* .exercise-details-modal {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -11,7 +11,7 @@
   max-width: 80%;
   max-height: 80%;
   overflow: auto;
-}
+} */
 
 .exercise-details-overlay {
   position: fixed;
@@ -26,10 +26,40 @@
   align-items: center;
 }
 
-.close-button {
+/* .close-button {
   position: absolute;
   top: 10px;
   right: 10px;
   cursor: pointer;
   font-size: 18px;
+} */
+.exercise-details-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  max-width: 80%;
+  max-height: 80%;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.button-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.close-button, .add-button {
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.add-button {
+  margin-right: 10px;
 }
