--- a/react-app/src/WorkoutPage.css
+++ b/react-app/src/WorkoutPage.css
@@ -1,6 +1,6 @@
 .NewWorkout {
   display: flex;
-  width: 900px;
+  width: 1200px;
   height: 600px;
 }
 
@@ -13,16 +13,17 @@
 }
 
 .exercise-box>div {
+  padding-top: 5px;
   box-sizing: border-box;
   /* Include padding and border in the box's total height */
   border: 2px solid #ccc;
-  padding: 20px;
-  min-width: 150px;
+  padding: 10x;
+  min-width: 260px;
   /* 4 items per row */
-  max-width: 150px;
+  max-width: 260px;
   /* Set a maximum width */
-  min-height: 120px;
-  max-height: 120px;
+  min-height: 150px;
+  max-height: 150px;
   /* Set a fixed maximum height */
   overflow-y: auto;
   /* Enable vertical scrolling for overflow content */
